Corrijo el parámetro de categoría según la API

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
         <div class="container">
             <h2>Recibe tips de aprendizaje gratis</h2>
             <p>Suscríbete a nuestra newsletter y recibe contenido exclusivo cada semana</p>
-            <form class="newsletter-form">
-                <input type="email" placeholder="Tu correo electrónico">
+            <form id="newsletter-form" class="newsletter-form">
+                <input type="email" placeholder="Tu correo electrónico" required>
                 <button type="submit">Suscribirse</button>
             </form>
         </div>
