Activo datos de prueba y elimino enlace roto

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                 </div>
                 <div class="hero-buttons">
                     <a href="#catalogo" class="btn btn-primary">Explorar cursos</a>
-                    <a href="#instructor" class="btn btn-outline">Convertirse en instructor</a>
                 </div>
             </div>
         </div>
@@ -94,7 +93,7 @@
                     <div class="spinner"></div>
                 </div>
             </div>
-            <a href="#catalogo" class="btn view-all-btn">Ver todos los cursos</a>
+            <button id="view-all-btn" class="btn view-all-btn">Ver todos los cursos</button>
         </div>
     </section>
 
