Añado la página de catálogo de cursos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <button id="search-button" type="button"><i class="fas fa-search"></i></button>
                 </div>
                 <div class="hero-buttons">
-                    <a href="#catalogo" class="btn btn-primary">Explorar cursos</a>
+                    <a href="catalogo.html" class="btn btn-primary">Explorar cursos</a>
                 </div>
             </div>
         </div>
