feat: Mejorar navegación y estilo de la home

--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
         <div class="container">
             <h2 class="section-title">Categorías Principales</h2>
             <div class="categories-grid">
-                <div class="category-card" data-category="desarrollo-web">
+                <a href="#cursos" class="category-card" data-category="desarrollo-web">
                     <i class="fas fa-code"></i>
                     <h3>Desarrollo Web y Programación</h3>
                     <p class="course-count">Cargando cursos...</p>
-                </div>
-                <div class="category-card" data-category="marketing">
+                </a>
+                <a href="#cursos" class="category-card" data-category="marketing">
                     <i class="fas fa-bullhorn"></i>
                     <h3>Marketing Digital y Negocios Online</h3>
                     <p class="course-count">Cargando cursos...</p>
-                </div>
-                <div class="category-card" data-category="salud">
+                </a>
+                <a href="#cursos" class="category-card" data-category="salud">
                     <i class="fas fa-heartbeat"></i>
                     <h3>Salud y Bienestar Integral</h3>
                     <p class="course-count">Cargando cursos...</p>
-                </div>
-                <div class="category-card" data-category="finanzas">
+                </a>
+                <a href="#cursos" class="category-card" data-category="finanzas">
                     <i class="fas fa-chart-line"></i>
                     <h3>Finanzas Personales e Inversión</h3>
                     <p class="course-count">Cargando cursos...</p>
-                </div>
-                <div class="category-card" data-category="creatividad">
+                </a>
+                <a href="#cursos" class="category-card" data-category="creatividad">
                     <i class="fas fa-palette"></i>
                     <h3>Hobbies y Habilidades Creativas</h3>
                     <p class="course-count">Cargando cursos...</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
