feat: Mejorar navegación y estilo de la home

--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
         </div>
     </section>
 
+    <!-- Subcategories Section -->
+    <section class="subcategories" id="subcategories">
+        <div class="container">
+            <h2 class="section-title">Explora por Subcategoría</h2>
+            <div id="subcategories-container" class="subcategories-grid">
+                <div class="loading">
+                    <div class="spinner"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Featured Courses -->
     <section id="cursos" class="featured-courses">
         <div class="container">
