feat: Mejorar navegación y estilo de la home

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                     <h3>Hobbies y Habilidades Creativas</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
+                <a href="#cursos" class="category-card" data-category="idiomas">
+                    <i class="fas fa-language"></i>
+                    <h3>Idiomas</h3>
+                    <p class="course-count">Cargando cursos...</p>
+                </a>
             </div>
         </div>
     </section>
