feat: Mejorar navegación y estilo de la home

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="container">
             <h2 class="section-title">Categorías Principales</h2>
             <div class="categories-grid">
-                <a href="#cursos" class="category-card" data-category="desarrollo-web">
-                    <i class="fas fa-code"></i>
-                    <h3>Desarrollo Web y Programación</h3>
+                <a href="#cursos" class="category-card" data-category="tecnologia">
+                    <i class="fas fa-microchip"></i>
+                    <h3>Tecnología</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="marketing">
