--- a/index.html
+++ b/index.html
@@ -60,24 +60,24 @@
                     <h3>Tecnología</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="marketing">
-                    <i class="fas fa-bullhorn"></i>
-                    <h3>Marketing Digital y Negocios Online</h3>
+                <a href="#cursos" class="category-card" data-category="negocios">
+                    <i class="fas fa-briefcase"></i>
+                    <h3>Negocios</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="salud">
-                    <i class="fas fa-heartbeat"></i>
-                    <h3>Salud y Bienestar Integral</h3>
+                <a href="#cursos" class="category-card" data-category="blockchain-ia">
+                    <i class="fas fa-cubes"></i>
+                    <h3>Blockchain y IA</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="finanzas">
-                    <i class="fas fa-chart-line"></i>
-                    <h3>Finanzas Personales e Inversión</h3>
+                <a href="#cursos" class="category-card" data-category="desarrollo-personal">
+                    <i class="fas fa-brain"></i>
+                    <h3>Desarrollo Personal</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="creatividad">
-                    <i class="fas fa-palette"></i>
-                    <h3>Hobbies y Habilidades Creativas</h3>
+                <a href="#cursos" class="category-card" data-category="cultura">
+                    <i class="fas fa-landmark"></i>
+                    <h3>Cultura</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="idiomas">
