refactor: Reemplazar categoría de desarrollo personal por emprendimiento

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <h3>Blockchain y IA</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="desarrollo-personal">
-                    <i class="fas fa-brain"></i>
-                    <h3>Desarrollo Personal</h3>
+                <a href="#cursos" class="category-card" data-category="emprendimiento">
+                    <i class="fas fa-lightbulb"></i>
+                    <h3>Emprendimiento</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="cultura">
