refactor: Reemplazar categoría de desarrollo personal por emprendimiento

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </a>
                 <a href="#cursos" class="category-card" data-category="negocios">
                     <i class="fas fa-briefcase"></i>
-                    <h3>Negocios</h3>
+                    <h3>Negocio</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="blockchain-ia">
