chore: Ajustar nombres de visualización de categorías

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h3>Negocio</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="blockchain-ia">
+                <a href="#cursos" class="category-card" data-category="blockchain-y-ia">
                     <i class="fas fa-cubes"></i>
                     <h3>Blockchain y IA</h3>
                     <p class="course-count">Cargando cursos...</p>
