fix: Corregir mapeo de API de categorías y añadir testimonios

--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="testimonial-card">
+                        <p class="testimonial-content">"El contenido sobre nuevas tecnologías como Blockchain es difícil de encontrar con esta calidad. ¡Totalmente recomendado para estar al día!"</p>
+                        <div class="testimonial-author">
+                            <img src="https://picsum.photos/seed/student3/50/50" alt="Estudiante" class="author-avatar">
+                            <div class="author-info">
+                                <h4>Carlos Jiménez</h4>
+                                <p>Inversor y Entusiasta Cripto</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="carousel-controls">
