feat: Añadir más testimonios a la página principal

--- a/index.html
+++ b/index.html
@@ -179,6 +179,66 @@
                             </div>
                         </div>
                     </div>
+                    <div class="testimonial-card">
+                        <p class="testimonial-content">"Los cursos de diseño y cultura me abrieron un nuevo mundo de posibilidades creativas. La comunidad es muy activa y siempre dispuesta a ayudar."</p>
+                        <div class="testimonial-author">
+                            <img src="https://picsum.photos/seed/student4/50/50" alt="Estudiante" class="author-avatar">
+                            <div class="author-info">
+                                <h4>Laura Vargas</h4>
+                                <p>Diseñadora UX/UI</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p class="testimonial-content">"Gracias al curso de emprendimiento, pude lanzar mi propio negocio. Las lecciones son prácticas y van directo al grano. ¡Una inversión que vale la pena!"</p>
+                        <div class="testimonial-author">
+                            <img src="https://picsum.photos/seed/student5/50/50" alt="Estudiante" class="author-avatar">
+                            <div class="author-info">
+                                <h4>Ricardo Mendoza</h4>
+                                <p>Emprendedor</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p class="testimonial-content">"Estoy aprendiendo mi tercer idioma con EstudiaYa. La calidad de los instructores nativos y los materiales interactivos hacen que el proceso sea divertido y efectivo."</p>
+                        <div class="testimonial-author">
+                            <img src="https://picsum.photos/seed/student6/50/50" alt="Estudiante" class="author-avatar">
+                            <div class="author-info">
+                                <h4>Elena Ríos</h4>
+                                <p>Estudiante de Idiomas</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p class="testimonial-content">"Como profesional de la tecnología, necesito estar siempre actualizado. Los cursos de EstudiaYa son mi recurso principal para aprender sobre las últimas tendencias."</p>
+                        <div class="testimonial-author">
+                            <img src="https://picsum.photos/seed/student7/50/50" alt="Estudiante" class="author-avatar">
+                            <div class="author-info">
+                                <h4>Javier Núñez</h4>
+                                <p>Ingeniero de Software</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p class="testimonial-content">"El curso de Negocios me dio las herramientas para optimizar los procesos en mi empresa. El impacto en la productividad fue inmediato. ¡Excelente contenido!"</p>
+                        <div class="testimonial-author">
+                            <img src="https://picsum.photos/seed/student8/50/50" alt="Estudiante" class="author-avatar">
+                            <div class="author-info">
+                                <h4>Isabel Torres</h4>
+                                <p>Directora de Operaciones</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-card">
+                        <p class="testimonial-content">"Me apasiona la cultura y el arte, y aquí encontré cursos fascinantes que no había visto en otras plataformas. La calidad de la producción es impecable."</p>
+                        <div class="testimonial-author">
+                            <img src="https://picsum.photos/seed/student9/50/50" alt="Estudiante" class="author-avatar">
+                            <div class="author-info">
+                                <h4>Andrés Castillo</h4>
+                                <p>Historiador del Arte</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="carousel-controls">
