feat: Añadir más testimonios a la página principal

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="spinner"></div>
                 </div>
             </div>
-            <button id="view-all-btn" class="btn view-all-btn">Ver todos los cursos</button>
+            <a href="https://emailcatcher.netlify.app/catalogo" id="view-all-btn" class="btn view-all-btn">Ver todos los cursos</a>
         </div>
     </section>
 
