feat: Añadir página de Carreras y actualizar menú de navegación

--- a/course.html
+++ b/course.html
@@ -20,9 +20,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html#cursos">Cursos</a></li>
+                    <li><a href="carreras.html">Carreras</a></li>
                     <li><a href="index.html#testimonios">Instructores</a></li>
                     <li><a href="index.html#blog">Blog</a></li>
-                    <li><a href="index.html#soporte">Soporte</a></li>
                 </ul>
             </nav>
             <div class="auth-buttons">
