--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <ul>
                     <li><a href="#cursos">Cursos</a></li>
                     <li><a href="#testimonios">Testimonios</a></li>
+                    <li><a href="carreras.html">Carreras</a></li>
                     <li><a href="#blog">Blog</a></li>
-                    <li><a href="#soporte">Soporte</a></li>
                 </ul>
             </nav>
             <div class="auth-buttons">
