feat: Crear plantilla para detalle de carrera

--- a/carreras.html
+++ b/carreras.html
@@ -47,7 +47,7 @@
                             <span><i class="fas fa-book"></i> 12 Cursos</span>
                             <span><i class="fas fa-clock"></i> 80h de contenido</span>
                         </div>
-                        <a href="#" class="btn btn-primary">Ver Carrera</a>
+                        <a href="carrera-detail.html?id=blockchain" class="btn btn-primary">Ver Carrera</a>
                     </div>
                 </div>
 
@@ -60,7 +60,7 @@
                             <span><i class="fas fa-book"></i> 15 Cursos</span>
                             <span><i class="fas fa-clock"></i> 110h de contenido</span>
                         </div>
-                        <a href="#" class="btn btn-primary">Ver Carrera</a>
+                        <a href="carrera-detail.html?id=emprendimiento" class="btn btn-primary">Ver Carrera</a>
                     </div>
                 </div>
 
@@ -73,7 +73,7 @@
                             <span><i class="fas fa-book"></i> 18 Cursos</span>
                             <span><i class="fas fa-clock"></i> 150h de contenido</span>
                         </div>
-                        <a href="#" class="btn btn-primary">Ver Carrera</a>
+                        <a href="carrera-detail.html?id=ia" class="btn btn-primary">Ver Carrera</a>
                     </div>
                 </div>
             </div>
