--- a/carreras.html
+++ b/carreras.html
@@ -36,49 +36,99 @@
         <div class="container">
             <h1 class="section-title">Elige tu Carrera Profesional</h1>
             <p class="section-subtitle">Rutas de aprendizaje completas para convertirte en un experto.</p>
-            
-            <div class="careers-grid">
-                <!-- Carrera 1: Blockchain -->
-                <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1642104793539-2b89a154c738?q=80&w=2070&auto=format&fit=crop');">
-                    <div class="career-card-content">
-                        <h3>Carrera Blockchain</h3>
-                        <p>Domina la tecnología que está revolucionando el mundo, desde criptomonedas hasta contratos inteligentes.</p>
-                        <div class="career-stats">
-                            <span><i class="fas fa-book"></i> 12 Cursos</span>
-                            <span><i class="fas fa-clock"></i> 80h de contenido</span>
-                        </div>
-                        <a href="carrera-detail.html?id=blockchain" class="btn btn-primary">Ver Carrera</a>
-                    </div>
-                </div>
 
-                <!-- Carrera 2: Emprendimiento Digital -->
-                <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1556761175-b413da4baf72?q=80&w=1974&auto=format&fit=crop');">
-                    <div class="career-card-content">
-                        <h3>Carrera Emprendimiento Digital</h3>
-                        <p>Aprende a crear, lanzar y escalar tu propio negocio en el mundo digital con estrategias probadas.</p>
-                        <div class="career-stats">
-                            <span><i class="fas fa-book"></i> 15 Cursos</span>
-                            <span><i class="fas fa-clock"></i> 110h de contenido</span>
+            <div id="careers-carousel" class="carousel-wrapper">
+                <div class="carousel-container">
+                    <!-- Carrera 1: Blockchain -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1642104793539-2b89a154c738?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Blockchain</h3>
+                            <p>Domina la tecnología que está revolucionando el mundo, desde criptomonedas hasta contratos inteligentes.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 12 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 80h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=blockchain" class="btn btn-primary">Ver Carrera</a>
                         </div>
-                        <a href="carrera-detail.html?id=emprendimiento" class="btn btn-primary">Ver Carrera</a>
                     </div>
-                </div>
 
-                <!-- Carrera 3: Experto en IA -->
-                <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1531746790731-6c087fecd65a?q=80&w=2070&auto=format&fit=crop');">
-                    <div class="career-card-content">
-                        <h3>Carrera Experto en IA</h3>
-                        <p>Conviértete en un profesional de la Inteligencia Artificial, aprendiendo Machine Learning y Deep Learning.</p>
-                        <div class="career-stats">
-                            <span><i class="fas fa-book"></i> 18 Cursos</span>
-                            <span><i class="fas fa-clock"></i> 150h de contenido</span>
+                    <!-- Carrera 2: Emprendimiento Digital -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1556761175-b413da4baf72?q=80&w=1974&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Emprendimiento Digital</h3>
+                            <p>Aprende a crear, lanzar y escalar tu propio negocio en el mundo digital con estrategias probadas.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 15 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 110h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=emprendimiento" class="btn btn-primary">Ver Carrera</a>
                         </div>
-                        <a href="carrera-detail.html?id=ia" class="btn btn-primary">Ver Carrera</a>
+                    </div>
+
+                    <!-- Carrera 3: Experto en IA -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1531746790731-6c087fecd65a?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Experto en IA</h3>
+                            <p>Conviértete en un profesional de la Inteligencia Artificial, aprendiendo Machine Learning y Deep Learning.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 18 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 150h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=ia" class="btn btn-primary">Ver Carrera</a>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="carousel-controls">
+                <button class="carousel-btn prev"><i class="fas fa-chevron-left"></i></button>
+                <button class="carousel-btn next"><i class="fas fa-chevron-right"></i></button>
+            </div>
+            <div class="view-all-container">
+                <a href="#" class="btn btn-outline">Ver todas las carreras</a>
+            </div>
         </div>
     </main>
+
+    <!-- Plans Section -->
+    <section class="plans-section">
+        <div class="container">
+            <h2 class="section-title">Elige tu Plan de Acceso Total</h2>
+            <div class="plans-grid">
+                <div class="plan-card">
+                    <h3>Mensual</h3>
+                    <p class="plan-price">$19<span>/mes</span></p>
+                    <ul class="plan-features">
+                        <li><i class="fas fa-check-circle"></i> Acceso a todos los cursos</li>
+                        <li><i class="fas fa-check-circle"></i> Acceso a todas las carreras</li>
+                        <li><i class="fas fa-times-circle"></i> Certificados profesionales</li>
+                    </ul>
+                    <a href="#" class="btn btn-outline">Seleccionar Plan</a>
+                </div>
+                <div class="plan-card recommended">
+                    <div class="recommended-badge">Recomendado</div>
+                    <h3>Anual</h3>
+                    <p class="plan-price">$149<span>/año</span></p>
+                    <ul class="plan-features">
+                        <li><i class="fas fa-check-circle"></i> Acceso a todos los cursos</li>
+                        <li><i class="fas fa-check-circle"></i> Acceso a todas las carreras</li>
+                        <li><i class="fas fa-check-circle"></i> Certificados profesionales</li>
+                        <li><i class="fas fa-check-circle"></i> Soporte prioritario</li>
+                    </ul>
+                    <a href="#" class="btn btn-primary">Seleccionar Plan</a>
+                </div>
+                <div class="plan-card">
+                    <h3>Empresas</h3>
+                    <p class="plan-price">Custom</p>
+                    <ul class="plan-features">
+                        <li><i class="fas fa-check-circle"></i> Equipos de 5+ usuarios</li>
+                        <li><i class="fas fa-check-circle"></i> Panel de administración</li>
+                        <li><i class="fas fa-check-circle"></i> Reportes de progreso</li>
+                    </ul>
+                    <a href="#" class="btn btn-outline">Contactar Ventas</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
@@ -92,5 +142,6 @@
         </div>
     </footer>
 
+    <script src="assets/js/carreras.js"></script>
 </body>
 </html>
