feat: Rediseñar página de carreras con carrusel y sección de planes

--- a/carreras.html
+++ b/carreras.html
@@ -77,6 +77,45 @@
                             <a href="carrera-detail.html?id=ia" class="btn btn-primary">Ver Carrera</a>
                         </div>
                     </div>
+
+                    <!-- Carrera 4: Data Science -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Data Science</h3>
+                            <p>Transforma datos en decisiones estratégicas aprendiendo análisis, visualización y modelos predictivos.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 20 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 180h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=datascience" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
+
+                    <!-- Carrera 5: Diseño UX/UI -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1581291518857-4e27b48ff24e?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Diseño UX/UI</h3>
+                            <p>Crea productos digitales intuitivos y atractivos que los usuarios amen, desde la investigación hasta el prototipado.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 14 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 95h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=uxui" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
+
+                    <!-- Carrera 6: Marketing Avanzado -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Marketing Avanzado</h3>
+                            <p>Domina las estrategias de SEO, SEM y automatización para llevar cualquier negocio al siguiente nivel.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 16 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 120h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=marketing" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="carousel-controls">
