feat: Añadir catálogo de carreras y carrusel automático

--- a/carreras.html
+++ b/carreras.html
@@ -123,7 +123,7 @@
                 <button class="carousel-btn next"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div class="view-all-container">
-                <a href="#" class="btn btn-outline">Ver todas las carreras</a>
+                <a href="carreras-catalogo.html" class="btn btn-outline">Ver todas las carreras</a>
             </div>
         </div>
     </main>
