feat: Añadir 6 carreras adicionales al catálogo

--- a/carreras.html
+++ b/carreras.html
@@ -116,6 +116,84 @@
                             <a href="carrera-detail.html?id=marketing" class="btn btn-primary">Ver Carrera</a>
                         </div>
                     </div>
+
+                    <!-- Carrera 7: Ciberseguridad -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1544890225-2f3faec4cd60?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Ciberseguridad</h3>
+                            <p>Protege sistemas y redes contra ataques. Aprende hacking ético, criptografía y seguridad en la nube.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 15 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 130h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=ciberseguridad" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
+
+                    <!-- Carrera 8: Cloud Computing -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1549692520-acc6669e2f0c?q=80&w=1887&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Cloud Computing</h3>
+                            <p>Domina las plataformas líderes como AWS, Azure y Google Cloud para desplegar aplicaciones escalables.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 12 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 100h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=cloud" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
+
+                    <!-- Carrera 9: Gestión de Proyectos -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1542626991-a2f572a6e5c9?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Gestión de Proyectos</h3>
+                            <p>Lidera equipos y entrega proyectos a tiempo y dentro del presupuesto con metodologías ágiles y tradicionales.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 10 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 70h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=proyectos" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
+
+                    <!-- Carrera 10: Producción Musical -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1511379938547-c1f69419868d?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Producción Musical</h3>
+                            <p>Crea, graba y mezcla tu propia música desde cero con herramientas como Ableton Live y Logic Pro X.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 18 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 140h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=musica" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
+
+                    <!-- Carrera 11: Fotografía Digital -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1505238680356-667803448bb6?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Fotografía Digital</h3>
+                            <p>Domina tu cámara y aprende composición, iluminación y edición para capturar imágenes impactantes.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 12 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 85h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=fotografia" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
+
+                    <!-- Carrera 12: Desarrollo de Videojuegos -->
+                    <div class="career-card" style="background-image: url('https://images.unsplash.com/photo-1550745165-9bc0b252726a?q=80&w=2070&auto=format&fit=crop');">
+                        <div class="career-card-content">
+                            <h3>Carrera Videojuegos</h3>
+                            <p>Aprende a crear tus propios videojuegos desde cero utilizando motores como Unity y Unreal Engine.</p>
+                            <div class="career-stats">
+                                <span><i class="fas fa-book"></i> 22 Cursos</span>
+                                <span><i class="fas fa-clock"></i> 200h de contenido</span>
+                            </div>
+                            <a href="carrera-detail.html?id=videojuegos" class="btn btn-primary">Ver Carrera</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="carousel-controls">
