--- a/catalogo.html
+++ b/catalogo.html
@@ -34,11 +34,44 @@
 
     <main class="catalog-page">
         <div class="container">
-            <h1 class="section-title">Catálogo de Cursos</h1>
-            <p class="section-subtitle">Explora nuestros cursos organizados por categoría.</p>
-            <div id="catalog-container">
-                <div class="loading">
-                    <div class="spinner"></div>
+            <div class="catalog-header">
+                <h1 class="section-title">Catálogo de Cursos</h1>
+                <p class="section-subtitle">Encuentra tu próximo curso y empieza a aprender hoy.</p>
+            </div>
+            <div class="catalog-layout">
+                <aside class="filters-sidebar">
+                    <h2>Filtros</h2>
+                    <div class="filter-group">
+                        <h4>Buscar por nombre</h4>
+                        <input type="text" id="filter-search" placeholder="Ej: Python, Marketing...">
+                    </div>
+                    <div class="filter-group">
+                        <h4>Ordenar por</h4>
+                        <select id="filter-sort">
+                            <option value="-popularity">Más populares</option>
+                            <option value="-reviews_avg">Mejor valorados</option>
+                            <option value="-publish_date">Más nuevos</option>
+                        </select>
+                    </div>
+                    <div class="filter-group">
+                        <h4>Categoría</h4>
+                        <select id="filter-category">
+                            <option value="">Todas las categorías</option>
+                            <!-- Opciones se cargarán con JS -->
+                        </select>
+                    </div>
+                    <div class="filter-group">
+                        <h4>Nivel de Dificultad</h4>
+                        <div id="filter-difficulty">
+                            <!-- Opciones se cargarán con JS -->
+                        </div>
+                    </div>
+                    <button id="apply-filters-btn" class="btn btn-primary">Aplicar Filtros</button>
+                </aside>
+                <div id="catalog-container" class="courses-results">
+                    <div class="loading">
+                        <div class="spinner"></div>
+                    </div>
                 </div>
             </div>
         </div>
