Refactor: Unificar categorías de Emprendimiento y Negocios

--- a/index.html
+++ b/index.html
@@ -61,18 +61,13 @@
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="negocios">
-                    <i class="fas fa-briefcase"></i>
-                    <h3>Negocio</h3>
+                    <i class="fas fa-lightbulb"></i>
+                    <h3>Negocios</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="blockchain-y-ia">
                     <i class="fas fa-cubes"></i>
                     <h3>Blockchain y IA</h3>
-                    <p class="course-count">Cargando cursos...</p>
-                </a>
-                <a href="#cursos" class="category-card" data-category="emprendimiento">
-                    <i class="fas fa-lightbulb"></i>
-                    <h3>Emprendimiento</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="cultura">
