Fix: Restaurar la sexta categoría (Emprendimiento)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
                     <h3>Blockchain y IA</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
+                <a href="#cursos" class="category-card" data-category="emprendimiento">
+                    <i class="fas fa-rocket"></i>
+                    <h3>Emprendimiento</h3>
+                    <p class="course-count">Cargando cursos...</p>
+                </a>
                 <a href="#cursos" class="category-card" data-category="cultura">
                     <i class="fas fa-landmark"></i>
                     <h3>Cultura</h3>
