Feat: Reemplazar categoría Emprendimiento por Productividad

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <h3>Blockchain y IA</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="emprendimiento">
-                    <i class="fas fa-rocket"></i>
-                    <h3>Emprendimiento</h3>
+                <a href="#cursos" class="category-card" data-category="productividad">
+                    <i class="fas fa-tasks"></i>
+                    <h3>Productividad</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-category="cultura">
