--- a/index.html
+++ b/index.html
@@ -54,35 +54,36 @@
     <section class="categories" id="categories">
         <div class="container">
             <h2 class="section-title">Categorías Principales</h2>
-            <div class="categories-grid">
-                <a href="#cursos" class="category-card" data-category="tecnologia">
-                    <i class="fas fa-microchip"></i>
-                    <h3>Tecnología</h3>
+            <div id="main-categories-grid" class="categories-grid">
+                <!-- Estas son ahora subcategorías promocionadas. Puedes cambiar los códigos y textos. -->
+                <a href="#cursos" class="category-card" data-subcategory-code="frontend">
+                    <i class="fab fa-react"></i>
+                    <h3>Frontend</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="negocios">
-                    <i class="fas fa-lightbulb"></i>
-                    <h3>Negocios</h3>
+                <a href="#cursos" class="category-card" data-subcategory-code="backend">
+                    <i class="fas fa-server"></i>
+                    <h3>Backend</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="blockchain-y-ia">
-                    <i class="fas fa-cubes"></i>
-                    <h3>Blockchain y IA</h3>
+                <a href="#cursos" class="category-card" data-subcategory-code="seo">
+                    <i class="fas fa-search-dollar"></i>
+                    <h3>SEO</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="productividad">
-                    <i class="fas fa-tasks"></i>
-                    <h3>Productividad</h3>
+                <a href="#cursos" class="category-card" data-subcategory-code="inversion">
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Inversión</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="cultura">
-                    <i class="fas fa-landmark"></i>
-                    <h3>Cultura</h3>
+                <a href="#cursos" class="category-card" data-subcategory-code="fotografia">
+                    <i class="fas fa-camera-retro"></i>
+                    <h3>Fotografía</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-category="idiomas">
+                <a href="#cursos" class="category-card" data-subcategory-code="ingles">
                     <i class="fas fa-language"></i>
-                    <h3>Idiomas</h3>
+                    <h3>Inglés</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
             </div>
