--- a/index.html
+++ b/index.html
@@ -55,25 +55,26 @@
         <div class="container">
             <h2 class="section-title">Categorías Principales</h2>
             <div id="main-categories-grid" class="categories-grid">
-                <!-- Estas son ahora subcategorías promocionadas. Puedes cambiar los códigos y textos. -->
-                <a href="#cursos" class="category-card" data-subcategory-code="frontend">
-                    <i class="fab fa-react"></i>
-                    <h3>Frontend</h3>
+                <!-- Categoría Principal: Tecnología -->
+                <a href="#cursos" class="category-card" data-category="tecnologia">
+                    <i class="fas fa-microchip"></i>
+                    <h3>Tecnología</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-subcategory-code="backend">
-                    <i class="fas fa-server"></i>
-                    <h3>Backend</h3>
+                <!-- Subcategorías promocionadas -->
+                <a href="#cursos" class="category-card" data-subcategory-code="salud">
+                    <i class="fas fa-heartbeat"></i>
+                    <h3>Salud y Bienestar</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-subcategory-code="seo">
-                    <i class="fas fa-search-dollar"></i>
-                    <h3>SEO</h3>
+                <a href="#cursos" class="category-card" data-subcategory-code="hobbies">
+                    <i class="fas fa-paint-brush"></i>
+                    <h3>Hobbies</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-subcategory-code="inversion">
                     <i class="fas fa-chart-line"></i>
-                    <h3>Inversión</h3>
+                    <h3>Finanzas</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <a href="#cursos" class="category-card" data-subcategory-code="fotografia">
