--- a/index.html
+++ b/index.html
@@ -55,36 +55,40 @@
         <div class="container">
             <h2 class="section-title">Categorías Principales</h2>
             <div id="main-categories-grid" class="categories-grid">
-                <!-- Categoría Principal: Tecnología -->
+                <!-- 1. Tecnología -->
                 <a href="#cursos" class="category-card" data-category="tecnologia">
                     <i class="fas fa-microchip"></i>
                     <h3>Tecnología</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <!-- Subcategorías promocionadas -->
-                <a href="#cursos" class="category-card" data-subcategory-code="salud">
-                    <i class="fas fa-heartbeat"></i>
-                    <h3>Salud y Bienestar</h3>
+                <!-- 2. Negocios -->
+                <a href="#cursos" class="category-card" data-category="negocios">
+                    <i class="fas fa-briefcase"></i>
+                    <h3>Negocios</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-subcategory-code="hobbies">
-                    <i class="fas fa-paint-brush"></i>
-                    <h3>Hobbies</h3>
+                <!-- 3. Desarrollo Personal -->
+                <a href="#cursos" class="category-card" data-category="desarrollo-personal">
+                    <i class="fas fa-brain"></i>
+                    <h3>Desarrollo Personal</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-subcategory-code="inversion">
+                <!-- 4. Finanzas -->
+                <a href="#cursos" class="category-card" data-category="finanzas">
                     <i class="fas fa-chart-line"></i>
                     <h3>Finanzas</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-subcategory-code="fotografia">
-                    <i class="fas fa-camera-retro"></i>
-                    <h3>Fotografía</h3>
+                <!-- 5. Cultura -->
+                <a href="#cursos" class="category-card" data-category="cultura">
+                    <i class="fas fa-palette"></i>
+                    <h3>Cultura</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
-                <a href="#cursos" class="category-card" data-subcategory-code="ingles">
+                <!-- 6. Idiomas -->
+                <a href="#cursos" class="category-card" data-category="idiomas">
                     <i class="fas fa-language"></i>
-                    <h3>Inglés</h3>
+                    <h3>Idiomas</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
             </div>
