feat: Reemplaza categoría 'Desarrollo Personal' por 'Inteligencia Artificial'

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <!-- 3. Desarrollo Personal -->
-                <a href="#cursos" class="category-card" data-category="desarrollo-personal">
-                    <i class="fas fa-brain"></i>
-                    <h3>Desarrollo Personal</h3>
+                <a href="#cursos" class="category-card" data-category="ia">
+                    <i class="fas fa-robot"></i>
+                    <h3>Inteligencia Artificial</h3>
                     <p class="course-count">Cargando cursos...</p>
                 </a>
                 <!-- 4. Finanzas -->
